cloud/service-cloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-todo-service
  namespace: default
  labels:
    app: chatbot-todo-app
  annotations:
    # DigitalOcean Load Balancer annotations
    service.beta.kubernetes.io/do-loadbalancer-name: "chatbot-todo-lb"
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-algorithm: "round_robin"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-path: "/"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-check-interval-seconds: "10"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-response-timeout-seconds: "5"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-unhealthy-threshold: "3"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-healthy-threshold: "2"
spec:
  type: LoadBalancer
  selector:
    app: chatbot-todo-app
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
